News UAT/force-app/main/default/objects/Ex_Log_Config__c/Ex_Log_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>2015-09-17 SFE-740</description>
    <label>Exception Log Config</label>
</CustomObject>