News UAT/force-app/main/default/objects/Ex_Log_Config__c/fields/Flushable__c.field-meta.xml
<CustomField>
    <fullName>Flushable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether Logger will insert a Logged Exception every time you call the Log method (if Flushable is false), or if you&#39;d like to en-queue the Logged Exceptions to conserve DML calls (Flushable = true).</description>
    <inlineHelpText>Determines whether Logger will insert a Logged Exception every time you call the Log method (if Flushable is false), or if you&#39;d like to en-queue the Logged Exceptions to conserve DML calls (Flushable = true).</inlineHelpText>
    <label>Flushable</label>
    <type>Checkbox</type>
</CustomField>