News UAT/force-app/main/default/objects/Ex_Log_Config__c/fields/Key_Person_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>Key_Person_to_Notify__c</fullName>
    <description>Key person to receive email when the specified Exceptions are logged. Additional recipients can be added through Workflow Email Alert.</description>
    <inlineHelpText>Key person to receive email when the specified Exceptions are logged. Additional recipients can be added through Workflow Email Alert.</inlineHelpText>
    <label>Key Person to Notify</label>
    <type>Email</type>
</CustomField>