News UAT/force-app/main/default/objects/Ex_Log_Config__c/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <description>Controls the level of debugging info included in your Logged Exceptions. Values are LOW, MED, or HIGH</description>
    <inlineHelpText>Controls the level of debugging info included in your Logged Exceptions. Values are LOW, MED, or HIGH</inlineHelpText>
    <label>Logging Level</label>
    <length>4</length>
    <type>Text</type>
</CustomField>