News UAT/force-app/main/default/objects/Ex_Log_Config__c/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <description>2015-09-17 SFE-740</description>
    <inlineHelpText>Owner Id that will be assigned after log is created. The Log record is private sharing, so to avoid other users accessing.</inlineHelpText>
    <label>Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>